Fixed spacing issue

--- a/client/src/components/HabitCard/HabitCard.css
+++ b/client/src/components/HabitCard/HabitCard.css
@@ -73,7 +73,7 @@
 }
 
 .HabitCard__view-comment-btn {
-  width: 190px;
+  width: 210px;
 }
 
 .HabitCard__err-msg,
